# home-cinema-control

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  INSTALL.en.md  INSTALL.md  LICENSE  README.en.md  README.md  RELEASE_POLICY.md  compose.yaml  config.example.json  config.secrets.example.json  pyproject.toml  requirements-build.txt  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
tests/: test_api_routes.py  test_av_input_retrier.py  test_av_routes.py  test_config_manager.py  test_config_migration.py  test_config_models.py  test_config_readiness.py  test_config_save_disabled_device.py  test_denon_marantz_av_receivers.py  test_device_factories_disabled.py  test_emby_client.py  test_emby_http.py  test_emby_item_mapper.py  test_emby_observed_track_mapper.py  test_emby_playback.py  test_emby_playback_command_handler.py  test_emby_playback_request.py  test_emby_session.py  test_emby_session_events.py  test_emby_session_monitor.py  test_emby_track_mapping.py  test_emby_track_resolver.py  test_emby_web_config.py  test_emby_websocket_event_mapper.py  test_jellyfin_client.py  test_jellyfin_item_mapper.py  test_jellyfin_observed_track_mapper.py  test_jellyfin_playback.py  test_jellyfin_playback_command_handler.py  test_jellyfin_playback_request.py  test_jellyfin_session.py  test_jellyfin_session_monitor.py  test_jellyfin_track_resolver.py  test_jellyfin_web_config.py  test_jellyfin_websocket_event_mapper.py  test_jellyfin_websocket_listener.py  (+83 more)
(+237 files in other folders)
