[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "home-cinema-control"
requires-python = ">=3.11"
dynamic = ["version"]
license = "LicenseRef-HCC-Source-Available-1.0"
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"home_cinema_control" = ["lang/**/*.json"]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
markers = [
    "integration: simulated integration tests without real hardware",
    "hardware: tests requiring real devices",
]
